[gd_scene load_steps=12 format=3 uid="uid://ba8s26j3ep0tj"]

[ext_resource type="Script" path="res://Scenes/Area2D.gd" id="1_vajcf"]
[ext_resource type="Texture2D" uid="uid://cnep1umono3ew" path="res://Spritesheet/sheet.png" id="2_fp7nl"]
[ext_resource type="AudioStream" uid="uid://xe8oiweqgywc" path="res://Music and sounds/explosion.mp3" id="2_jqies"]
[ext_resource type="Texture2D" uid="uid://d5gh54u6vmhl" path="res://Spritesheet/Explosion/explosion00.png" id="4_rlrln"]
[ext_resource type="Texture2D" uid="uid://cjcf2t0ik0oan" path="res://Spritesheet/Explosion/explosion01.png" id="5_caay3"]
[ext_resource type="Texture2D" uid="uid://88803ppkgn3o" path="res://Spritesheet/Explosion/explosion02.png" id="6_626rx"]
[ext_resource type="Texture2D" uid="uid://dsyn1o6j85u5i" path="res://Spritesheet/Explosion/explosion03.png" id="7_6jjsr"]
[ext_resource type="Texture2D" uid="uid://dmdxbgmqyyulg" path="res://Spritesheet/Explosion/explosion04.png" id="8_78skv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jbwq"]
size = Vector2(13, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_faqxj"]
atlas = ExtResource("4_rlrln")
region = Rect2(0, 0, 583, 536)

[sub_resource type="SpriteFrames" id="SpriteFrames_yy82r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faqxj")
}, {
"duration": 1.0,
"texture": ExtResource("5_caay3")
}, {
"duration": 1.0,
"texture": ExtResource("6_626rx")
}, {
"duration": 1.0,
"texture": ExtResource("7_6jjsr")
}, {
"duration": 1.0,
"texture": ExtResource("8_78skv")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[node name="Node2D" type="Node2D"]
position = Vector2(-1, -20)

[node name="blue_shot" type="Area2D" parent="." groups=["player"]]
script = ExtResource("1_vajcf")

[node name="Explosion_SE" type="AudioStreamPlayer2D" parent="blue_shot"]
stream = ExtResource("2_jqies")

[node name="Sheet" type="Sprite2D" parent="blue_shot"]
texture = ExtResource("2_fp7nl")
region_enabled = true
region_rect = Rect2(835, 565, 13, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="blue_shot"]
shape = SubResource("RectangleShape2D_0jbwq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="blue_shot"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="blue_shot"]
visible = false
position = Vector2(-1.90735e-06, 2)
scale = Vector2(0.0471698, 0.0522388)
sprite_frames = SubResource("SpriteFrames_yy82r")
frame = 3
frame_progress = 0.577154

[connection signal="body_entered" from="blue_shot" to="blue_shot" method="_on_body_entered"]
[connection signal="body_shape_entered" from="blue_shot" to="blue_shot" method="_on_body_shape_entered"]
[connection signal="finished" from="blue_shot/Explosion_SE" to="blue_shot" method="_on_explosion_se_finished"]
[connection signal="screen_exited" from="blue_shot/VisibleOnScreenNotifier2D" to="blue_shot" method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="blue_shot/AnimatedSprite2D" to="blue_shot" method="_on_animated_sprite_2d_animation_finished"]
